--- a/project/myCrossing/src/app/perfil/perfil.component.css
+++ b/project/myCrossing/src/app/perfil/perfil.component.css
@@ -37,7 +37,7 @@ span {
   border-color: #d1dbb8;
   border-style: solid;
   border-width: 0.5vw;
-  box-shadow: 0px 0px 10px 1px rgb(23 23 23 / 55%)
+  box-shadow: 0px 0px 10px 1px rgb(23 23 23 / 55%);
 }
 
 .bckg{
