--- a/project/myCrossing/src/app/perfil/coleccionesp/coleccionesp.component.css
+++ b/project/myCrossing/src/app/perfil/coleccionesp/coleccionesp.component.css
@@ -68,9 +68,13 @@ span{
 }
 
 .selected{
-  background-color: var(--azul);
+  background-color: #a3d5d6;
   border-radius: 10px;
   transition: 0.3s;
+}
+
+.selected span{
+  color:white;
 }
 
 .en-lista{
