--- a/project/myCrossing/src/app/perfil/perfil.component.html
+++ b/project/myCrossing/src/app/perfil/perfil.component.html
@@ -76,8 +76,6 @@
             <div class="v-center" style="justify-content: center;">
               <input class="input-resized text-input" formControlName="id_switch" type="text" placeholder="SW-1234-5678-9012">
             </div>
-            <!-- BORRAR ESTE INPUT -->
-            <input class="input-resized" formControlName="id_suenyo" type="text" placeholder="DA-1234-5678-9012">
           </div>
         </div>
       </form>
@@ -99,6 +97,9 @@
 <div class="wrapper-perfil">
   <h2>Colecciones Especiales</h2>
   <app-coleccionesp></app-coleccionesp>
-  <h2>Mis album de fotos</h2>
+</div>
+<hr id="hr-azul">
+<div class="wrapper-perfil">
+  <h2>Mi álbum de fotos</h2>
   <app-album></app-album>
 </div>
