--- a/project/myCrossing/src/styles.css
+++ b/project/myCrossing/src/styles.css
@@ -352,6 +352,13 @@ label{
 
 .b-scale:hover{
   transform: scale(1.1);
+}
+
+.b-shadow{
+  transition: 0.3s;
+}
+
+.b-shadow:hover{
   box-shadow: 0 1px 6px var(--shadow-5), 0 3px 6px var(--shadow-9);
 }
 
