--- a/project/myCrossing/src/app/perfil/perfil.component.html
+++ b/project/myCrossing/src/app/perfil/perfil.component.html
@@ -40,7 +40,7 @@
             <hr class="passport-hr">
           </div>
         </div>
-        <div class="bckg" #fondoEdit>
+        <div class="bckg" #fondoEdit [style]="modoEdicion ? 'height: 26vw;' : ''">
           <div id="secondary">
             <div id="flex" style="display: block;">
               <div class="v-center" style="justify-content: space-between;">
