--- a/project/myCrossing/src/app/cazar-ahora/cat-caza-peces/cat-caza-peces.component.css
+++ b/project/myCrossing/src/app/cazar-ahora/cat-caza-peces/cat-caza-peces.component.css
@@ -7,15 +7,19 @@ span{
   }
 
   .content-wrapper-bot{
-    background-color: #93c8ff;
+    background-color: #5197ca;
   }
 
   .pag-menu{
     width: 100%;
+    position: relative;
+    margin-top: 1vw;
   }
 
   .grid-w-gap{
     grid-template-columns: repeat(5, 1fr);
+    position: relative;
+    transition: 0.3s;
   }
 
   .grid-item-wrap{
@@ -38,6 +42,8 @@ span{
 
   .b-darkGreen{
     background-color: rgb(157 228 163);
+    transform: scale(1.1);
+    font-weight: bold;
   }
 
   .b-darkBlue{
@@ -121,9 +127,12 @@ span{
   }
 
   #wrap-filtros{
-    padding-bottom: 1vw;
+    padding: 1vw 0;
     display:flex;
     margin: auto;
+    background-color: #b5d6ff;
+    border-radius: 50px;
+    box-shadow: 0px 0px 15px -5px rgb(23 23 23 / 55%);
   }
 
   #filtro-sombra > button, #filtro-lugar > button, #filtro-usuario > button{
@@ -162,8 +171,17 @@ span{
   }
 
   .editar-top-left{
-    top: 9vw;
+    top: 15vw;
     right: unset;
+    left:1vw;
+  }
+
+  :host{
+    background-color: #5197ca;
+  }
+
+  .burbuja-title{
+    background-image: url("../../../assets/images/bubble-cazar-ahora.png");
   }
 
   #ser-wrap > button {
@@ -177,10 +195,26 @@ span{
   }
 
   #volver{
-    background-image: url("../../../assets/images/volver-azul.png");
+    background-image: url("../../../assets/images/volver-rojo.png");
   }
 
-  #volver:hover{
-    background-image: url("../../../assets/images/volver-verde.png");
+  .bg-scroll-1{
+    background-image: url("../../../assets/images/pez-bg-0.png");
   }
 
+
+  .bg-scroll-2{
+    background-image: url("../../../assets/images/pez-bg-1.png");
+  }
+
+  .no-result{
+    background-color: #b5d6ff;
+    border-radius: 50px;
+    position:relative;
+    margin: 3% 0;
+    box-shadow: 0px 0px 15px -5px rgb(23 23 23 / 55%);
+  }
+
+  .wrap-scale:hover{
+    background-color: #b3c4da;
+  }
