--- a/project/myCrossing/src/app/perfil/perfil.component.css
+++ b/project/myCrossing/src/app/perfil/perfil.component.css
@@ -38,6 +38,7 @@ span {
   border-style: solid;
   border-width: 0.5vw;
   box-shadow: 0px 0px 10px 1px rgb(23 23 23 / 55%);
+  height: 36.3vw
 }
 
 .bckg{
