--- a/project/myCrossing/src/app/navbar/navbar.component.html
+++ b/project/myCrossing/src/app/navbar/navbar.component.html
@@ -3,8 +3,7 @@
 
   <div id="menu">
     <button [class]="_comunicacion.activar ? 'activado':''" class="button-nav" routerLink="/cat-caza-insectos" routerLinkActive="activo">Cazar ahora</button>
-    <button class="button-nav" routerLink="/disenyos" routerLinkActive="activo">Diseños</button>
-    <button class="button-nav" routerLink="/probador" routerLinkActive="activo">Probador</button>
+    <button class="button-nav" routerLink="/cat-sueno" routerLinkActive="activo">Sueños</button>
     <button class="button-nav" id="irMercadoNabos" routerLink="/mercado-nabos" routerLinkActive="activo">Mercado Nabos</button>
     <button class="button-nav" routerLink="/calendario" routerLinkActive="activo">Calendario</button>
   </div>
