view: Logo done

--- a/project/myCrossing/src/app/footer/footer.component.html
+++ b/project/myCrossing/src/app/footer/footer.component.html
@@ -1,7 +1,7 @@
 <div class="wave"></div>
 <div id="footer">
   <div id="grid">
-    <img src="../../assets/images/logo.png"/>
+    <img src="../../assets/images/logo-transparente.png"/>
     <div>
       <p class="bold">AYUDA</p>
       <a>Manual de usuario</a>
