--- a/project/myCrossing/src/app/inicio/inicio.component.html
+++ b/project/myCrossing/src/app/inicio/inicio.component.html
@@ -2,11 +2,11 @@
   <div class="dv-inicio" id="dv-header">
     <div id="portada-wrap">
       <div>
-        <img src="../../assets/images/logo.png" alt="logo"/>
+        <img src="../../assets/images/logo-fondo.png"/>
       </div>
       <div id="portada-item2">
-        <h1>My Crossing</h1>
-        <h3>¡Lleva al día el progreso de tu isla!</h3>
+        <h1 style="font-size: 3vw;">My Crossing</h1>
+        <h3 style="font-size: 1.5vw;">¡Lleva al día el progreso de tu isla!</h3>
       </div>
       <div id="portada-item3">
         <ng-container *ngIf="!verification.logged">
