--- a/project/myCrossing/src/app/perfil/perfil.component.html
+++ b/project/myCrossing/src/app/perfil/perfil.component.html
@@ -16,13 +16,13 @@
             </div>
             <div class="v-center">
               <span><b>Fruta: </b>{{this.usuario.fruta | capitalize}}</span>
-              <img src="../../assets/images/logo.png" class="icono" #fruta>
+              <img src="../../assets/images/logo-transparente.png" class="icono" #fruta>
             </div>
           </div>
           <hr>
           <div class="v-center">
             <span><b>Cumpleaños: </b>{{mesToString(this.usuario.cumpleanyos)}}, {{signoZodiaco(this.usuario.cumpleanyos)}}</span>
-            <img src="../../assets/images/logo.png" class="icono" #zodiaco>
+            <img src="../../assets/images/logo-transparente.png" class="icono" #zodiaco>
           </div>
           <hr>
           <span><b>ID Switch: </b>{{this.usuario.id_switch}}</span>
