--- a/project/myCrossing/src/styles.css
+++ b/project/myCrossing/src/styles.css
@@ -1,302 +1,455 @@
 :root{
---amarillo: #edd9a3;
---l-amarillo: #ffefc4;
---azul: #ade6e7;
---l-azul: #c9f3f3;
---xl-azul: #d9f6f6;
---verde: #95E59B;
---l-verde: #CBF4C4;
---blanco: #F7F3E8;
---rojo: #ff7673;
---l-rojo: #f7a09e;
---l-gris: #a5a5a4;
-}
-
-body{
-  margin: 0;
-}
-
-label{
-  font-size: 1.3vw;
-  font-weight: bold;
-}
-
-* {
-  font-family: Varela Round, serif;
-  outline: none;
-  color: #2c271b;
-}
-
-.boton-circular{
-  border-radius: 100%;
-  width: 4vw;
-  height: 4vw;
-  border-style: solid;
-  border-width: 0.3vw;
-  cursor: pointer;
-  margin: 0 1vw;
-}
-
-.boton-alargado{
-  cursor: pointer;
-  border-style: solid;
-  border-width: 0.3vw;
-  border-radius: 1vw;
-}
-
-.popup-menu{
-  background-color: #F7F3E8;
-  height: auto;
-  display: block;
-  padding: 7%;
-  border-radius: 15px;
-  font-size: 1.2vw;
-  box-shadow: 0px 0px 10px 1px rgb(23 23 23 / 55%);
-  z-index: 5;
-}
-
-.editar{
-  position: absolute;
-}
-
-.boton-imagen{
-  width: 2vw;
-  height: 2vw;
-  background-size: contain;
-  border: none;
-  background-color: transparent;
-  cursor: pointer;
-  background-repeat: no-repeat;
-}
-
-.bckg-img-boton{
-  background-size: 90%;
-  background-position: center;
-  background-repeat: no-repeat;
-}
-
-.img-radio{
-  width: 3vw;
-  height: 3vw;
-  cursor: pointer;
-  border-radius: 50%;
-  margin: 0 0.4vw;
-  padding: 0.4vw;
-}
-
-.img-radio:hover{
-  background-color: #CBF4C4;
-}
-
-.img-radio-checked{
-  background-color:#c9f3f3;
-}
-
-.b-bold{
-  font-weight: bold;
-  font-size: 1.5vw;
-}
-
-.radio-hidden{
-  position: absolute;
-  opacity: 0;
-}
-
-.editar-blanco{
-  background-image: url("./assets/images/editar-blanco.png");
-}
-
-.editar-verde{
-  background-image: url("./assets/images/editar-verde.png");
-}
-
-.editar-azul{
-  background-image: url("./assets/images/editar-azul.png");
-}
-
-.save{
-  background-image: url("./assets/images/save-verde.png");
-}
-
-.delete-rojo{
-  background-image: url("./assets/images/basura-roja.png");
-}
-
-.delete{
-  background-image: url("./assets/images/basura-gris.png");
-}
-
-.delete:hover{
-  background-image: url("./assets/images/basura-roja.png");
-}
-
-.menu-hr{
-  background-color: white;
-  border-color: white;
-  border-width: 0.1vw;
-  width: 80%;
-  margin: auto;
-  border-radius: 20px;
-  position: relative;
-}
-
-.centrado{
-  margin: auto;
-  width: fit-content;
-}
-
-.footer-wrap{
-  position: relative;
-}
-
-.flex-column-centered{
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-}
-
-.flex-centered{
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-.no-pointer{
-  cursor: auto;
-}
-.flex-between{
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-}
-
-.check-button-empty{
-  background-color: blue;
-}
-
-.check-button-empty:hover{
-  background-color: rgb(255, 145, 0);
-}
-
-.check-button-full{
-  background-color: red;
-}
-
-#hr-azul{
-  border-width: 0.2vw;
-  border-style: solid;
-  width: 33%;
-  position: absolute;
-  border-color: #69c0c0;
-  margin-inline-start: 33%;
-  border-radius: 20px;
-  background-color:  #69c0c0;
-  margin-block-start: -2px;
-}
-
-.b-azul{
-  background-color: #d9f6f6;
-  border-color: #ade6e7;
-}
-
-.b-verde{
-  background-color: rgb(203, 244, 196);
-  border-color: rgb(149, 229, 155);
-}
-
-.b-azul-hover{
-  background-color: #d9f6f6;
-  border-color: #ade6e7;
-}
-
-.b-azul-hover:hover{
-  background-color: rgb(203, 244, 196);
-  border-color: rgb(149, 229, 155);
-}
-
-.b-rojo-hover:hover{
-  background-color: var(--l-rojo);
-  border-color: var(--rojo);
-}
-
-.b-amarillo{
-  background-color: #ffefc4;
-  border-color: #edd9a3;
-}
-
-.shadow{
-  box-shadow: 0px -10px 20px 0px rgb(23 23 23 / 55%);
-}
-
-.shadow-ins-bot{
-  box-shadow: 0px 15px 20px 0px rgb(23 23 23 / 55%);
-}
-
-.content-wrapper-top{
-  padding: 2vw 2vw 0 2vw;
-}
-
-.content-wrapper-mid{
-  padding: 0 2vw;
-}
-
-.content-wrapper-bot{
-  padding: 0 2vw 2vw 2vw;
-}
-
-.grid-w-gap{
-  display: grid;
-  grid-gap: 1vw;
-}
-
-.grid-item-wrap{
-  border-radius: 20px;
-  padding: 1vw;
-}
-
-.scroll-x{
-  overflow-x: scroll;
-}
-
-.div-error{
-  position: fixed;
-  background-color: rgb(252, 137, 137);
-  width: 30%;
-  align-self: center;
-  top: 7%;
-  z-index: 10;
-  padding: 1vw 2.5vw;
-  border-radius: 20px;
-}
-
-.text-input{
-  border-radius: 20px;
-  border-style: none;
-  padding: 0.5vw 1vw;
-  box-shadow: 0px 0px 10px 1px rgb(23 23 23 / 20%);
-  width: 100%;
-}
-
-.w100{
-  width: 100%;
-}
-
-.padding-nav{
-  padding-top: 5vw;
-}
-
-.padding-footer{
-  padding-bottom: 3vw;
-}
-
-.warning {
-  color: var(--rojo);
-}
-
-.background-img{
-  height: 100%;
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-color: #c9f3f3;
-}
+  --amarillo: #edd9a3;
+  --l-amarillo: #ffefc4;
+  --azul: #ade6e7;
+  --l-azul: #c9f3f3;
+  --xl-azul: #d9f6f6;
+  --verde: #95E59B;
+  --l-verde: #CBF4C4;
+  --blanco: #F7F3E8;
+  --rojo: #ff7673;
+  --l-rojo: #f7a09e;
+  --l-gris: #a5a5a4;
+  }
+  
+  body{
+    margin: 0;
+  }
+  
+  label{
+    font-size: 1.3vw;
+    font-weight: bold;
+  }
+  
+  * {
+    font-family: Varela Round, serif;
+    outline: none;
+    color: #2c271b;
+  }
+  
+  ::-webkit-scrollbar {
+    width: 12px;
+    transition: 0.3s;
+  }
+  
+  ::-webkit-scrollbar-thumb {
+    background: #69c0c0;
+    border-radius: 20px;
+    transition: 0.3s;
+  }
+  
+  ::-webkit-scrollbar-thumb:hover {
+    background-color: #3fa1a1;
+  }
+  
+  ::-webkit-scrollbar-corner {
+    background-color: transparent;
+  }
+  
+  .boton-circular{
+    border-radius: 100%;
+    width: 4vw;
+    height: 4vw;
+    border-style: solid;
+    border-width: 0.3vw;
+    cursor: pointer;
+    margin: 0 1vw;
+  }
+  
+  .boton-alargado{
+    cursor: pointer;
+    border-style: solid;
+    border-width: 0.3vw;
+    border-radius: 1vw;
+  }
+  
+  .popup-menu{
+    background-color: #F7F3E8;
+    height: auto;
+    display: block;
+    padding: 7%;
+    border-radius: 15px;
+    font-size: 1.2vw;
+    box-shadow: 0px 0px 10px 1px rgb(23 23 23 / 55%);
+    z-index: 5;
+  }
+  
+  .editar{
+    position: absolute;
+  }
+  
+  .boton-imagen{
+    width: 2vw;
+    height: 2vw;
+    background-size: contain;
+    border: none;
+    background-color: transparent;
+    cursor: pointer;
+    background-repeat: no-repeat;
+    transition: 0.3s;
+  }
+  
+  .bckg-img-boton{
+    background-size: 90%;
+    background-position: center;
+    background-repeat: no-repeat;
+  }
+  
+  .img-radio{
+    width: 3vw;
+    height: 3vw;
+    cursor: pointer;
+    border-radius: 50%;
+    margin: 0 0.4vw;
+    padding: 0.4vw;
+    transition: 0.3s;
+  }
+  
+  .img-radio:hover{
+    background-color: #c9f3f3;
+  }
+  
+  .img-radio-checked{
+    background-color:#CBF4C4;
+  }
+  
+  .b-bold{
+    font-weight: bold;
+    font-size: 1.5vw;
+  }
+  
+  .radio-hidden{
+    position: absolute;
+    opacity: 0;
+    bottom:0;
+    left:0;
+  }
+  
+  .editar-blanco{
+    background-image: url("./assets/images/editar-blanco.png");
+  }
+  
+  .check-verde{
+    background-image: url("./assets/images/check-verde.png");
+    transform: scale(1.5);
+    transition: 0.3s;
+  }
+  
+  .check-verde:hover{
+    transform: scale(1.1);
+  }
+  
+  .editar-verde{
+    background-image: url("./assets/images/check-verde.png");
+  }
+  
+  .editar-azul{
+    background-image: url("./assets/images/editar-azul.png");
+  }
+  
+  .editar-azul:hover{
+    background-image: url("./assets/images/editar-verde.png");
+  }
+  
+  .save{
+    background-image: url("./assets/images/check-verde.png");
+  }
+  
+  .delete-rojo{
+    background-image: url("./assets/images/basura-roja.png");
+  }
+  
+  .delete{
+    background-image: url("./assets/images/basura-gris.png");
+    transition: 0.3s;
+  }
+  
+  .delete:hover{
+    background-image: url("./assets/images/basura-roja.png");
+  }
+  
+  .menu-hr{
+    background-color: white;
+    border-color: white;
+    border-width: 0.1vw;
+    width: 80%;
+    margin: auto;
+    border-radius: 20px;
+    position: relative;
+  }
+  
+  .centrado{
+    margin: auto;
+    width: fit-content;
+  }
+  
+  .footer-wrap{
+    position: relative;
+  }
+  
+  .flex-column-centered{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+  
+  .flex-centered{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  
+  .no-pointer{
+    cursor: auto;
+  }
+  .flex-between{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  }
+  
+  .check-button-empty{
+    background-color: blue;
+  }
+  
+  .check-button-empty:hover{
+    background-color: rgb(255, 145, 0);
+  }
+  
+  .check-button-full{
+    background-color: red;
+  }
+  
+  #hr-azul{
+    border-width: 0.2vw;
+    border-style: solid;
+    width: 33%;
+    position: absolute;
+    border-color: #69c0c0;
+    margin-inline-start: 33%;
+    border-radius: 20px;
+    background-color:  #69c0c0;
+    margin-block-start: -2px;
+  }
+  
+  .b-azul{
+    background-color: #d9f6f6;
+    border-color: #ade6e7;
+  }
+  
+  .b-verde{
+    background-color: rgb(203, 244, 196);
+    border-color: rgb(149, 229, 155);
+    transform: scale(1.1);
+    font-weight: bold;
+    transition: 0.3s;
+  }
+  
+  .b-verde:active{
+    transform: scale(1);
+  }
+  
+  .b-azul-hover{
+    background-color: #d9f6f6;
+    border-color: #ade6e7;
+  }
+  
+  .b-azul-hover:hover{
+    background-color: rgb(203, 244, 196);
+    border-color: rgb(149, 229, 155);
+  }
+  
+  .b-rojo-hover:hover{
+    background-color: var(--l-rojo);
+    border-color: var(--rojo);
+  }
+  
+  .b-amarillo{
+    background-color: #ffefc4;
+    border-color: #edd9a3;
+  }
+  
+  .shadow{
+    box-shadow: 0px -10px 20px 0px rgb(23 23 23 / 55%);
+  }
+  
+  .shadow-ins-bot{
+    box-shadow: 0px 15px 20px 0px rgb(23 23 23 / 55%);
+  }
+  
+  .content-wrapper-top{
+    padding: 2vw 2vw 0 2vw;
+  }
+  
+  .content-wrapper-mid{
+    padding: 0 2vw;
+  }
+  
+  .content-wrapper-bot{
+    padding: 0 2vw 2vw 2vw;
+  }
+  
+  .grid-w-gap{
+    display: grid;
+    grid-gap: 1vw;
+  }
+  
+  .grid-item-wrap{
+    border-radius: 20px;
+    padding: 1vw;
+  }
+  
+  .scroll-x{
+    overflow-x: scroll;
+  }
+  
+  .div-error{
+    position: fixed;
+    background-color: rgb(252, 137, 137);
+    width: 30%;
+    align-self: center;
+    top: 7%;
+    z-index: 10;
+    padding: 1vw 2.5vw;
+    border-radius: 20px;
+  }
+  
+  .text-input{
+    border-radius: 20px;
+    border-style: none;
+    padding: 0.5vw 1vw;
+    box-shadow: inset 0 0 8px rgb(0 0 0 / 42%);
+    width: 100%;
+  }
+  
+  .w100{
+    width: 100%;
+  }
+  
+  .padding-nav{
+    padding-top: 5vw;
+  }
+  
+  .padding-footer{
+    padding-bottom: 3vw;
+  }
+  
+  .warning {
+    color: var(--rojo);
+  }
+  
+  .background-img{
+    height: 100%;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-color: #c9f3f3;
+  }
+  
+  .b-scale{
+    transition: 0.3s;
+  }
+  
+  .b-scale:hover{
+    transform: scale(1.1);
+  }
+  
+  .b-shadow{
+    transition: 0.3s;
+  }
+  
+  .b-shadow:hover{
+    box-shadow: 0 1px 6px var(--shadow-5), 0 3px 6px var(--shadow-9);
+  }
+  
+  .b-scale:active{
+    transform: scale(1);
+  }
+  
+  .b-scale-xl{
+    transition: 0.3s;
+  }
+  
+  .b-scale-xl:hover{
+    transform: scale(1.5);
+  }
+  
+  .bg-scroll-1{
+    background-size: 200px;
+    height: 200%;
+    width: 200%;
+    position: fixed;
+    top: -200px;
+    left: -300px;
+    animation: scroll1 20s linear infinite;
+  }
+  
+  .bg-scroll-2{
+    background-size: 200px;
+    height: 200%;
+    width: 200%;
+    position: fixed;
+    top: -200px;
+    left: -500px;
+    animation: scroll2 20s linear infinite;
+  }
+  
+  @keyframes scroll1 {
+    0% {
+        transform: rotate(15deg) translate(0, 0);
+    }
+    100% {
+        transform: rotate(15deg) translate(-200px, -200px);
+    }
+  }
+  
+  @keyframes scroll2 {
+    0% {
+        transform: rotate(15deg) translate(0, 0);
+    }
+    100% {
+        transform: rotate(15deg) translate(200px, 200px);
+    }
+  }
+  
+  .burbuja-title{
+    display: flex;
+    justify-content: center;
+    width: 40rem;
+    height: 12.5rem;
+    background-repeat: no-repeat;
+    background-size: contain;
+    margin: auto;
+    margin-bottom: 1vw;
+    align-items: center;
+  }
+  
+  .wrap-scale img{
+    transition: 0.3s;
+  }
+  
+  .wrap-scale:hover img{
+    transform: scale(1.1);
+  }
+  
+  .wrap-scale{
+    transition: 0.3s;
+    border-radius: 100%;
+  }
+  
+  /* Chrome, Safari, Edge, Opera */
+  input::-webkit-outer-spin-button,
+  input::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+  }
+  
+  /* Firefox */
+  input[type=number] {
+    -moz-appearance: textfield;
+  }
+  
+  .b-crear{
+    width: 2.5vw;
+    height: 2.5vw;
+  }
