--- a/project/myCrossing/src/app/cat-sueno/cat-sueno.component.css
+++ b/project/myCrossing/src/app/cat-sueno/cat-sueno.component.css
@@ -107,3 +107,27 @@ span{
 :host{
   background-color: #b39d74;
 }
+.fondo{
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    top: 0%;
+    left: 0%;
+}
+.container-panel{
+    top:25%;
+    position: fixed;
+    text-align: -webkit-center;
+    width: 100%;
+}
+.panel{
+    padding: 1%;
+    border-style: none;
+    border-radius: 2vw;
+    background-color: #F7F3E8;
+    box-shadow: 0px 0px 10px 1px rgb(23 23 23 / 55%);
+    z-index: 15;
+    width: fit-content;
+    width: 40vw;
+    font-size: 1.5vw;
+}
